deployment-example/ingress-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-server-deployment
  namespace: default
  labels:
    app: go-app-server
spec:
  selector:
    matchLabels:
      app: go-app-server-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: go-app-server-deployment
    spec:
      containers:
        - name: go-sample-app
          image: mayurwadekar2/go-app-server:1.0.2
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-server-service
spec:
  selector:
    app: go-app-server-deployment
  type: LoadBalancer
  ports:
  - name: go-sample-app-service
    protocol: TCP
    port:  8081
    targetPort: 8081
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-server-ingress
spec:
  rules:
  - host: goapp.com
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: go-app-server-service
            port:
              number: 8081
